# NotiGenie

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  github_issues.md  import_script.py  logs.json  pyproject.toml  requirements.txt  requirements_linux.txt  setup.sh  test_direct_request.py  test_fix_version.py
.agent/workflows/: deploy-pi.md
.gemini/: GEMINI.md
.github/workflows/: cloud_functions_ci.yml  deploy.yml  firestore-import.yml  (+2 more)
cloud_functions/: .env.example  gemini_agent.py  line_handler.py  main.py  notion_handler.py  requirements.txt  schemas.yaml
docs/: architecture.md  backend_sequence.md  deployment.md  development.md  functions.md  spec_epaper_todo.md
firestore_import_data/: INSTRUCTIONS.md  menu_list.json
raspberry_pi/: .asoundrc  .env.example  DEPLOY.md  Dockerfile  Hi-Genie_en_raspberry-pi_v4_0_0.ppn  __init__.py  app.py  aquestalk_client.py  docker-compose.yml  epaper_display.py  requirements.txt  stt_client.py  test_audio_output.py  test_pvrecorder.py  tts_factory.py  tts_interface.py  voicevox_client.py  wake_word_engine.py
scripts/: connect_pi.ps1  fetch_pi_logs.ps1
src/: config.yaml.example  list_tools_test.py  main.py  query_test.py  test_notion_connection.py
tests/: conftest.py  test_gemini_agent.py  test_gemini_gateway.py  test_line_handler.py  test_main.py  test_notion_adapter.py  test_notion_adapter_url.py  test_notion_client_gateway.py  test_notion_handler.py.disabled  test_wake_word_engine.py.disabled  test_wakeword_handler.py  verify_firestore.py  verify_notion_connection.py
(+70 files in other folders)
