[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notigenie"
version = "1.0.0"
description = "AI Assistant for managing Notion databases via voice or text"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "cloud_functions"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["cloud_functions"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/verify_*.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 127
max-complexity = 10
exclude = [".git", "__pycache__", "*.egg-info", ".venv"]
